<resources>
    <string name="app_name">WeatherToWear</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="my_closet">My Closet</string>
    <string name="saved_outfits">Saved Outfits</string>
    <string name="new_outfits">New Outfits</string>
    <string name="options">Options</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>

    <string name="logout">Logout</string>
    <string name="login_error">Login Error!</string>
    <string name="no_passwords">You have no passwords</string>
    <string name="action_add">Add</string>
    <string name="action_logout">Logout</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="save">Save</string>
    <string name="edit_password_title">Edit Password</string>
    <string name="service">Service</string>
    <string name="add_password_title">Add Password</string>
    <string name="add">Add</string>
    <string name="login_with_rosefire">Login with Rosefire</string>
    <string name="rosefire_key">6e337676-679a-4f61-834f-4c5269094005</string>
    <string name="checkable">checkable</string>
    <string name="my_pics">My Pics</string>
    <string name="all_pics">All Pics</string>

    <string name="what_do_you_find">What do you find...</string>
    <string name="hot">Hot</string>
    <string name="cold">Cold</string>
    <string name="enter_your_zip_code">Enter your Zip Code:</string>
    <string name="what_times_will_you_be_gone_for">What times will you be gone for?</string>
    <string name="home">Home</string>
    <string name="temp_1">Temperature 1</string>
    <string name="title_activity_my_saved_outfits">MySavedOutfits</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_my_new_outfits">MyNewOutfits</string>
    <string name="add_clothing_title"> Add Items of Clothing</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <string-array name="hot_spinner">
        <item> 50 </item>
        <item> 55 </item>
        <item> 60 </item>
        <item> 65 </item>
        <item> 70 </item>
        <item> 75 </item>
        <item> 80 </item>
        <item> 85 </item>
        <item> 90 </item>
        <item> 95 </item>
        <item> 100 </item>
    </string-array>

    <string-array name="cold_spinner">
        <item> 0 </item>
        <item> 5 </item>
        <item> 10 </item>
        <item> 15 </item>
        <item> 20 </item>
        <item> 25 </item>
        <item> 30 </item>
        <item> 35 </item>
        <item> 40 </item>
        <item> 45 </item>
        <item> 50 </item>
    </string-array>

    <string-array name="clothing_list">
        <item> Blouse </item>
        <item> Boots </item>
        <item> Cardigan </item>
        <item> Gloves</item>
        <item> Hat</item>
        <item> Hoodie</item>
        <item> Jacket</item>
        <item> Jeans</item>
        <item> Polo </item>
        <item> Sandals</item>
        <item> Scarf</item>
        <item> Shorts</item>
        <item> Skirt</item>
        <item> Sneakers</item>
        <item> Sweater</item>
        <item> Sweatpants</item>
        <item> Sweatshirt</item>
        <item> T-Shirt</item>
        <item> Tanktop</item>
        <item> Umbrella</item>
        <item> Winter Coat</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_outfit">Save Outfit</string>
    <string name="delete_item">Delete Item</string>
    <string name="are_you_sure_you_want_to_remove_this_outfit">Are you sure you want to remove this outfit?</string>
    <string name="delete_simple">DELETE</string>


</resources>

