<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_pref"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/preferences" />
        <item
            android:id="@+id/nav_my_closet"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_closet" />
        <item
            android:id="@+id/nav_saved_outfits"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/saved_outfits" />
        <item
            android:id="@+id/nav_new_outfits"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/new_outfits" />
    </group>



</menu>
