<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PreferencesFragment">

    <TextView
        android:text="@string/what_do_you_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/whatDoYouFindTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_alignTop="@+id/zipCodeTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:id="@+id/zipCodeEditText" />

    <TextView
        android:text="@string/hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hotTextView"
        android:layout_below="@+id/whatDoYouFindTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerHot"
        android:layout_below="@+id/hotTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/hot_spinner" />

    <TextView
        android:text="@string/cold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coldTextView"
        android:layout_below="@+id/spinnerHot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCold"
        android:layout_below="@+id/coldTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/cold_spinner"/>

    <TextView
        android:text="@string/enter_your_zip_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zipCodeTextView"
        android:layout_below="@+id/spinnerCold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Save Changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPreferences"
        android:layout_below="@+id/zipCodeEditText"
        android:layout_toRightOf="@+id/zipCodeTextView"
        android:layout_toEndOf="@+id/zipCodeTextView"
        android:layout_marginTop="41dp" />


</RelativeLayout>
